Add strip viewer, remove NaturalViewer
Refactor all the things to make that work
